# EDHUD

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.in  README.md
cmake/: installer.nsi.in
resources/: edhud.icns  resources1.qrc
src/: buildnumber.h.in  main.cpp
src/Settings/: Preferences.cpp  Preferences.h  Settings.cpp  Settings.h
src/UI/: MainWindow.cpp  MainWindow.h  MainWindow.ui
src/Utility/: AutoUpdateChecker.h
src/X52Pro/: DirectOutputCallbacks.h  MFDPage.cpp  MFDPage.h  MaterialLogMFDPage.cpp  MaterialLogMFDPage.h  ScanMFDPage.cpp  ScanMFDPage.h  ScanSummaryMFDPage.cpp  ScanSummaryMFDPage.h  ScanValueMFDPage.cpp  ScanValueMFDPage.h  X52ProMFD.cpp  X52ProMFD.h
wininstall/: installer.nsi
